--- a/css/index.css
+++ b/css/index.css
@@ -147,13 +147,33 @@ body{
 #i{
     background-color: rgb(10, 133, 237);
 }
-#j{
-    background-color: rgb(137, 252, 0);
-}
-#k{
-    background-color: rgb(105, 44, 255);
-}
-#l{
-    background-color: rgb(0, 240, 208);
-}
+
 /* -----ID----- */
+
+/* -----@medias----- */
+
+@media (max-width: 425px){
+    .menu,
+    .ganaste{
+        display: flex;
+        flex-direction: column;
+        padding: 0 10vw;
+        justify-content: center;
+        position: fixed;
+        left: 5vw;
+        top: 20vh;
+        background-color: #ffffff;
+        border-radius: 20px;
+        box-shadow: 0 0 5px 0 #6b6b6b;
+        height: 60vh;
+        width: 90vw;
+        box-sizing: border-box;
+    }
+    .won{
+        cursor: default;
+        font-size: 70px;
+        box-shadow: none;
+        background-color: transparent;
+        margin: 0 0 100px 0;
+    }
+}
