--- a/css/index.css
+++ b/css/index.css
@@ -120,31 +120,31 @@ body{
 }
 
 /* -----items__colors----- */
-#a{
+#azulCeleste{
     background-color: rgb(13, 65, 225);
 }
-#b{
+#naranjaZanaoria{
     background-color: rgb(255, 123, 0);
 }
-#c{
+#azulBaya{
     background-color: rgb(45, 0, 247);
 }
-#d{
+#amarillo{
     background-color: rgb(255, 255, 0);
 }
-#e{
+#rojo{
     background-color: rgb(253, 0, 0);
 }
-#f{
+#magenta{
     background-color: rgb(186, 1, 255);
 }
-#g{
+#verdeLima{
     background-color: rgb(198, 255, 0);
 }
-#h{
+#naranjaSalamandra{
     background-color: rgb(255, 72, 0);
 }
-#i{
+#azulCeruleo{
     background-color: rgb(10, 133, 237);
 }
 
